--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item"> 
-                  <div class="box-masonry" style="min-height: 460px;"><a href="practice_animation.html" title="" class="box-masonry-image with-hover-overlay with-hover-icon"><img src="img/portfolio/animation.jpg" alt="" class="img-responsive"></a>
+                  <div class="box-masonry" style="min-height: 460px;"><a href="practice_animation.html" title="" class="box-masonry-image with-hover-overlay with-hover-icon"><img src="img/portfolio/animation.JPG" alt="" class="img-responsive"></a>
                     <div class="box-masonry-text">
                       <h4> <a href="practice_animation.html">Practice Animation</a></h4>
                       <div class="box-masonry-desription">
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item"> 
-                  <div class="box-masonry" style="min-height: 460px;"><a href="project_animation.html" title="" class="box-masonry-image with-hover-overlay with-hover-icon"><img src="img/portfolio/project_animation.jpg" alt="" class="img-responsive"></a>
+                  <div class="box-masonry" style="min-height: 460px;"><a href="project_animation.html" title="" class="box-masonry-image with-hover-overlay with-hover-icon"><img src="img/portfolio/project_animation.JPG" alt="" class="img-responsive"></a>
                     <div class="box-masonry-text">
                       <h4> <a href="project_animation.html">Project Animation</a></h4>
                       <div class="box-masonry-desription">
@@ -117,7 +117,7 @@
                 </div>
                 
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item"> 
-                  <div class="box-masonry" style="min-height: 460px;"><a href="game.html" title="" class="box-masonry-image with-hover-overlay with-hover-icon"><img src="img/portfolio/game.jpg" alt="" class="img-responsive"></a>
+                  <div class="box-masonry" style="min-height: 460px;"><a href="game.html" title="" class="box-masonry-image with-hover-overlay with-hover-icon"><img src="img/portfolio/game.JPG" alt="" class="img-responsive"></a>
                     <div class="box-masonry-text">
                       <h4> <a href="game.html">Game (QUIZ)</a></h4>
                       <div class="box-masonry-desription">
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item"> 
-                  <div class="box-masonry" style="min-height: 460px;"><a href="web_design.html" title="" class="box-masonry-image with-hover-overlay with-hover-icon"><img src="img/portfolio/web_design.jpg" alt="" class="img-responsive"></a>
+                  <div class="box-masonry" style="min-height: 460px;"><a href="web_design.html" title="" class="box-masonry-image with-hover-overlay with-hover-icon"><img src="img/portfolio/web_design.JPG" alt="" class="img-responsive"></a>
                     <div class="box-masonry-text">
                       <h4> <a href="web_design.html">Web Design</a></h4>
                       <div class="box-masonry-desription">
