--- a/detail.html
+++ b/detail.html
@@ -33,6 +33,9 @@
           <!--   *** SIDEBAR ***-->
           <div id="sidebar" class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
             <div class="sidebar-content">
+              <div class="col-md-4">
+                      <p><img src="img/agusronaldo.jpg" alt="This is me" class="image img-circle img-responsive"></p>
+              </div>
               <h1 class="sidebar-heading"> <a href="index.html">Agus Ronaldo Siahaan</a></h1>
               <p class="sidebar-p">I am a Web Developer since 2015. </p>
               <p class="sidebar-p">Originally from Indonesia, currently based in Batam Island. </p>
