--- a/poster.html
+++ b/poster.html
@@ -62,9 +62,9 @@
                 <div class="content-column-content">
                   <h1>Poster</h1>
                   <div id="main-slider">
-                    <div class="item"><img alt="" src="img/slider/3.png" class="img-responsive"></div>
-                    <div class="item"><img alt="" src="img/slider/2.png" class="img-responsive"></div>
-                    <div class="item"><img alt="" src="img/slider/1.png" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/3.PNG" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/2.PNG" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/1.PNG" class="img-responsive"></div>
                   </div>
                   <!-- /#main-slider-->
                    <h3>Product Detail</h3>
