--- a/catalogue.html
+++ b/catalogue.html
@@ -62,8 +62,8 @@
                 <div class="content-column-content">
                   <h1>Catalogue</h1>
                   <div id="main-slider">
-                    <div class="item"><img alt="" src="img/slider/catalogue_1.jpg" class="img-responsive"></div>
-                    <div class="item"><img alt="" src="img/slider/catalogue_2.jpg" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/catalogue_1.JPG" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/catalogue_2.JPG" class="img-responsive"></div>
                   </div>
                   <!--
                   <object width="400" height="400" data="swf/e-card_3311501010.swf"></object>
