--- a/web_design.html
+++ b/web_design.html
@@ -62,11 +62,11 @@
                 <div class="content-column-content">
                   <h1>Web Deisgn</h1>
                   <div id="main-slider">
-                    <div class="item"><img alt="" src="img/slider/web_design_1.jpg" class="img-responsive"></div>
-                    <div class="item"><img alt="" src="img/slider/web_design_2.jpg" class="img-responsive"></div>
-                    <div class="item"><img alt="" src="img/slider/web_design_3.jpg" class="img-responsive"></div>
-                    <div class="item"><img alt="" src="img/slider/web_design_4.jpg" class="img-responsive"></div>
-                    <div class="item"><img alt="" src="img/slider/web_design_5.jpg" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/web_design_1.JPG" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/web_design_2.JPG" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/web_design_3.JPG" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/web_design_4.JPG" class="img-responsive"></div>
+                    <div class="item"><img alt="" src="img/slider/web_design_5.JPG" class="img-responsive"></div>
                   </div>
                   <!-- /#main-slider-->
                    <h3>Product Detail</h3>
