--- a/web_design.html
+++ b/web_design.html
@@ -60,7 +60,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="content-column-content">
-                  <h1>Web Deisgn</h1>
+                  <h1>Web Design</h1>
                   <div id="main-slider">
                     <div class="item"><img alt="" src="img/slider/web_design_1.JPG" class="img-responsive"></div>
                     <div class="item"><img alt="" src="img/slider/web_design_2.JPG" class="img-responsive"></div>
