--- a/game.html
+++ b/game.html
@@ -78,7 +78,7 @@
                    <h3>Product Detail</h3>
                   <blockquote>
                     <p>This is the quiz game. I named it KIM (Kids Quiz Game). Simple game that make you to think about the answer while the time is runnning out. You can download the Game with the link below.</p>
-                    <a href="http://localhost/agus_ronaldo/swf/3311501010_Agus_Ronaldo_Siahaan.swf" target="_blank">Download Game</a>
+                    <a href="https://agussronaldo.github.io/agusronaldo/swf/3311501010_Agus_Ronaldo_Siahaan.swf" target="_blank">Download Game</a>
                     
                   </blockquote>
                   <p>The Game Spesification Includes :</p>
