--- a/game.html
+++ b/game.html
@@ -61,6 +61,7 @@
               <div class="col-lg-12">
                 <div class="content-column-content">
                   <h1>Game</h1>
+                  <p>The content of this site contains Flash format. So you need to add Flash Plugin in your browser to play the contents. Thank you.</p>
                   <div id="main-slider">
                     <div class="item"><object width="800" height="600" data="swf/3311501010_Agus_Ronaldo_Siahaan.swf"></object></div>
                   </div>
